WIP: fix OpenAPI warnings and errors
